Terminando projeto em SASS

--- a/index.html
+++ b/index.html
@@ -4,24 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>    <link rel="stylesheet" href="css/styles.css">
-    <title>Galeria em SASS</title>
+    <title>Gallery em SASS</title>
 </head>
 <body>
     <header class="header">
-        <a href="" class="header-brand"> Galeria </a>
+        <a href="" class="header-brand"> Gallery </a>
         <nav class="header-navbar">
             <ul>
                 <li>
                     <a href="" class="active">Home</a>
                 </li>
                 <li>
-                    <a href="">Fotos</a>
+                    <a href="">Photos</a>
                 </li>
                 <li>
-                    <a href="">Serviços</a>
+                    <a href="">Services</a>
                 </li>
                 <li>
-                    <a href="">Contato</a>
+                    <a href="">Contacts</a>
                 </li>
             </ul>
         </nav>
@@ -51,5 +51,43 @@
             </ul>
         </div>
     </header>
+
+    <main>
+        <div class="gallery">
+            <div class="gallery-card" id="card-1">
+                <h2 class="gallery-card-tittle">Animals</h2>
+                <a href="" class="gallery-card-btn">Mais fotos</a>
+            </div>
+
+            <div class="gallery-card" id="card-2">
+                <h2 class="gallery-card-tittle">Landscape</h2>
+                <a href="" class="gallery-card-btn">Mais fotos</a>
+            </div>
+
+            <div class="gallery-card" id="card-3">
+                <h2 class="gallery-card-tittle">Art</h2>
+                <a href="" class="gallery-card-btn">Mais fotos</a>
+            </div>
+
+            <div class="gallery-card" id="card-4">
+                <h2 class="gallery-card-tittle">Decorations</h2>
+                <a href="" class="gallery-card-btn">Mais fotos</a>
+            </div>
+
+            <div class="gallery-card" id="card-5">
+                <h2 class="gallery-card-tittle">Sports</h2>
+                <a href="" class="gallery-card-btn">Mais fotos</a>
+            </div>
+
+            <div class="gallery-card" id="card-6">
+                <h2 class="gallery-card-tittle">Nature</h2>
+                <a href="" class="gallery-card-btn">Mais fotos</a>
+            </div>
+        </div>
+    </main>
+
+    <footer>
+        <p><span>Gallery</span> &copy; 2024</p>
+    </footer>
 </body>
 </html>
