--- a/index.html
+++ b/index.html
@@ -55,32 +55,32 @@
     <main>
         <div class="gallery">
             <div class="gallery-card" id="card-1">
-                <h2 class="gallery-card-tittle">Animals</h2>
+                <h2 class="gallery-card-title">Animals</h2>
                 <a href="" class="gallery-card-btn">Mais fotos</a>
             </div>
 
             <div class="gallery-card" id="card-2">
-                <h2 class="gallery-card-tittle">Landscape</h2>
+                <h2 class="gallery-card-title">Landscape</h2>
                 <a href="" class="gallery-card-btn">Mais fotos</a>
             </div>
 
             <div class="gallery-card" id="card-3">
-                <h2 class="gallery-card-tittle">Art</h2>
+                <h2 class="gallery-card-title">Art</h2>
                 <a href="" class="gallery-card-btn">Mais fotos</a>
             </div>
 
             <div class="gallery-card" id="card-4">
-                <h2 class="gallery-card-tittle">Decorations</h2>
+                <h2 class="gallery-card-title">Decorations</h2>
                 <a href="" class="gallery-card-btn">Mais fotos</a>
             </div>
 
             <div class="gallery-card" id="card-5">
-                <h2 class="gallery-card-tittle">Sports</h2>
+                <h2 class="gallery-card-title">Sports</h2>
                 <a href="" class="gallery-card-btn">Mais fotos</a>
             </div>
 
             <div class="gallery-card" id="card-6">
-                <h2 class="gallery-card-tittle">Nature</h2>
+                <h2 class="gallery-card-title">Nature</h2>
                 <a href="" class="gallery-card-btn">Mais fotos</a>
             </div>
         </div>
